--- a/packages/site/pb_hooks/pages/_private/browser.ejs
+++ b/packages/site/pb_hooks/pages/_private/browser.ejs
@@ -4,7 +4,7 @@
       <%= `http://localhost:8090` %>
     </div>
   </div>
-  <div class=" bg-base-100 text-left px-4 pb-32" <%- data.bodyTags||'' %>>
-    <%- data.content||`This page is empty.`%>
+  <div class=" bg-base-100 text-left px-4 pb-32" <%- typeof bodyTags !== 'undefined' ? bodyTags : '' %>>
+    <%- content||`This page is empty.`%>
   </div>
 </div>
