--- a/packages/site/pb_hooks/pages/_private/browser.ejs
+++ b/packages/site/pb_hooks/pages/_private/browser.ejs
@@ -1,4 +1,4 @@
-<div class="mockup-browser bg-primary border w-full">
+<div class="mockup-browser  border w-full">
   <div class="mockup-browser-toolbar">
     <div class="input">
       <%= `http://localhost:8090` %>
