--- a/packages/site/pb_hooks/pages/assets/app.tailwind.css
+++ b/packages/site/pb_hooks/pages/assets/app.tailwind.css
@@ -1,8 +1,6 @@
 @import 'tailwindcss';
 @plugin "daisyui" {
-  themes:
-    light --cupcake,
-    dark --prefersdark;
+  themes: synthwave --default;
 }
 @plugin "@tailwindcss/typography";
 
