--- a/packages/site/pb_hooks/pages/_private/quickstart.ejs
+++ b/packages/site/pb_hooks/pages/_private/quickstart.ejs
@@ -2,12 +2,12 @@
   Step 1: Choose a starter.
 </div>
 
-<div class="max-w-[320px] sm:max-w-full overflow-x-auto">
+<div class="w-full sm:max-w-full overflow-x-auto">
   <pre><code class="language-bash ">npm create pocketpages</code></pre>
 </div>
 
 <div class="text-left overflow text-2xl mt-5 mb-5">Step 2: Run.</div>
-<div class="max-w-[320px] sm:max-w-full overflow-x-auto">
+<div class="w-full overflow-x-auto">
   <pre><code class="language-bash">pocketbase --dir=minimal/pb_data --dev serve 
 </code></pre>
 </div>
