feat(realtime): rename sse plugin to realtime and redo API

--- a/packages/starters/htmx/pb_hooks/pages/api/chat.ejs
+++ b/packages/starters/htmx/pb_hooks/pages/api/chat.ejs
@@ -1,9 +1,4 @@
 <script server>
-  const {
-    message
-  } = body()
-  sseSend('chat')
+  const { message } = body()
+  realtime.send('chat', stringify(include(`chat-msg.ejs`, { message })))
 </script>
-<div>
-  <%= message %>
-</div>
