--- a/packages/starters/datastar/pb_hooks/pages/_private/chat-messages.ejs
+++ b/packages/starters/datastar/pb_hooks/pages/_private/chat-messages.ejs
@@ -1,8 +1,5 @@
-<div id="chat-box" class="space-y-3">
-  <div
-    class="min-h-[200px] max-h-[300px] overflow-y-auto bg-gray-50 rounded-lg p-4 border border-gray-200"
-  >
-    <% for (const message of store('messages')||[]) { %>
+<div id="chat-messages">
+    <% for (const message of messages) { %>
       <div class="flex items-start gap-3">
         <span class="text-2xl"><%= message.from %></span>
         <div class="bg-white rounded-lg px-4 py-2 shadow text-gray-800">
@@ -10,5 +7,4 @@
         </div>
       </div>
     <% } %>
-  </div>
 </div>
